Empty program info log should not be a '\0' string in WebGL

BUG=635417
TEST=conformance/programs/program-infolog.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2220933002
Cr-Commit-Position: refs/heads/master@{#410527}

Former-commit-id: c54b546d3d2155e9973f7bf8d450c2374026acef